# f1tenth_lab1_template

./: .gitignore  NOTES.md
.devcontainer/: Dockerfile  devcontainer.json
lab1_ws/lab1_pkg/: CMakeLists.txt  package.xml
lab1_ws/lab1_pkg/lab1_pkg/: module_to_import.py  relay.py  talker.py
lab1_ws/lab1_pkg/src/: lab1_node.cpp
lab1_ws/lab1_startup/: CMakeLists.txt  package.xml
lab1_ws/lab1_startup/launch/: lab1.launch.py
lab1_ws/src/: README.md
lab1_ws/src/lab1_pkg/: CMakeLists.txt  setup.py
lab1_ws/src/lab1_pkg/lab1_pkg/: my_first_node.py  talker.py
lab1_ws/src/lab1_pkg/scripts/: lab1_node.py
